2007-01-09  Jonathan Larmour  <jifl@eCosCentric.com>

	* doc/manpages/net/getaddrinfo.3: Remove obsolete comment about
	not being thread-safe.

2007-01-07  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/dhcp_support.c: 
	* cdl/net.cdl:
	Added CDL to control the size of the stack used by
	the DHCP management thread.

2006-12-18  Sergei Gavrikov  <sg@sgs.gomel.by>

	* tests/ga_server_test.c: Updated flags argument in call of
	getnameinfo().

2006-05-25  Andrew Lunn  <andrew.lunn@ascom.ch>

	* cdl/net.cdl: Fix calculation of TFTPD stack
	size. CYGNUM_HAL_STACK_SIZE_TYPICAL is not a CDL variable, it is a
	#define, so we need to ensure that the compiler evaluates the
	expression, not the CDL library.
  
2006-03-26  Andrew Lunn  <andrew.lunn@ascom.ch>

	* tests/nc_test_framework.h: 
	* tests/nc_test_master.c: Fix the compiler warnings when
	building for Linux.

2006-02-27	Jay Foster   <jay@systech.com>

	* src/dhcp_prot.c: Updated set_fixed_tag(), set_variable_tag(),
	and unset_tag() to handle TAG_PAD bytes properly.  Also updated
	set_fixed_tag() and set_variable_tag() to permit setting options that
	already exist, but are a different size, rather than asserting.
	This corrects problems interacting with mis-behaving DHCP servers
	that reply with modified versions of a DHCP option sent by the eCos
	client, such as TAG_HOST_NAME.

2005-10-24  Andrew Lunn  <andrew.lunn@ascom.ch>

	* include/network.h: Include <string.h> to stop warnings.

2005-10-23  Andrew Lunn  <andrew.lunn@ascom.ch>

	* test/nc*_test_master.c: gettimeofday is now in POSIX

2005-10-13  Andrew Lunn  <andrew.lunn@ascom.ch>

	* docs/manpages/sys/socketpair.2: Removed this man page since
	socketpair(2) is not supported.
 
2005-09-16  Andrew Lunn  <andrew.lunn@ascom.ch>

	* tests/server_test.c: use socklen_t.
	* tests/nc_test_slave.c: use socklen_t and diag_print type fixes
	to stop warnings with gcc4.x
	* tests/tcp_echo.c: use socklen_t and diag_print type fixes to
	stop warnings with gcc4.x